--- a/html/css/index.css
+++ b/html/css/index.css
@@ -2,3 +2,20 @@
   margin: 0;
   padding: 0;
 }
+
+.material-icons-outlined {
+  font-size: 150%;
+}
+
+body {
+  background-color: rgb(243, 243, 243);
+}
+
+h1 {
+  margin-left: 1%;
+}
+
+.container {
+  margin-top: 3%;
+  margin-left: 3%;
+}
